baby pet's Wont grow up anymore Fixes #57