@@ -161,7 +161,7 @@ public class EntityMyWolf extends EntityMyPet
     {
         if (flag)
         {
-            this.datawatcher.watch(12, new Integer(-24000));
+            this.datawatcher.watch(12, Integer.valueOf(Integer.MIN_VALUE));
         }
         else
         {
